[package]
name = "bridge-loss-emu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
fork = "0.2.0"
futures = "0.3.31"
netns-rs = "0.1.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rocket = "0.5.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
users = "0.11.0"
