[package]
name = "bridge-loss-emu"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
fork = "0.2.0"
futures = "0.3.31"
futures-core = "0.3.31"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.19.0" # must in sync with rtnetlink crate
netlink-packet-utils = "0.5.2"
netns-rs = "0.1.0"
nix = { version = "0.29.0", features = ["signal"] }
reqwest = { version = "0.12.12", features = ["stream"] }
rocket = "0.5.1"
rtnetlink = { git = "https://github.com/xarblu/rtnetlink.git", rev = "9f40b555937a87156b3c695d3e4d7090e1a7741b" }
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
users = "0.11.0"
